--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "blitz dev",
     "start:production": "blitz start --port $PORT",
-    "heroku-postbuild": "blitz prisma migrate deploy --preview-feature && blitz build",
+    "heroku-postbuild": "blitz prisma migrate deploy --preview-feature",
     "build": "blitz build",
     "start": "blitz start",
     "studio": "blitz prisma studio",
