--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@prisma/client": "3.11.0",
     "autoprefixer": "10.4.2",
     "blitz": "0.45.3",
+    "node-fetch": "3.2.3",
     "postcss": "8.4.7",
+    "prisma": "3.11.0",
     "react": "18.0.0-beta-149b420f6-20211119",
     "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
     "react-hook-form": "7.27.1",
     "react-masonry-css": "1.0.16",
     "tailwindcss": "3.0.23",
-    "prisma": "3.11.0",
     "zod": "3.13.4"
   },
   "devDependencies": {
