--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@hookform/resolvers": "2.8.8",
     "@prisma/client": "3.11.0",
+    "@use-hooks/image-size": "1.0.5",
     "autoprefixer": "10.4.2",
     "blitz": "0.45.3",
     "node-fetch": "3.2.3",
@@ -36,6 +37,7 @@
     "react": "18.0.0-beta-149b420f6-20211119",
     "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
     "react-hook-form": "7.27.1",
+    "react-image-size": "1.0.4",
     "react-masonry-css": "1.0.16",
     "tailwindcss": "3.0.23",
     "zod": "3.13.4"
