--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-image-size": "1.0.4",
     "react-masonry-css": "1.0.16",
     "tailwindcss": "3.0.23",
-    "zod": "3.13.4"
+    "zod": "3.13.4",
+    "prisma": "3.11.1",
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -51,8 +52,7 @@
     "prettier-plugin-prisma": "3.10.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "prisma": "3.11.1",
-    "typescript": "~4.5"
+    "typescript": "~4.5",
   },
   "private": true
 }
