--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@hookform/resolvers": "2.8.8",
     "@prisma/client": "3.11.1",
     "@use-hooks/image-size": "1.0.5",
+    "prisma": "3.11.1",
     "autoprefixer": "10.4.2",
     "blitz": "0.45.3",
     "node-fetch": "3.2.3",
@@ -39,8 +40,7 @@
     "react-image-size": "1.0.4",
     "react-masonry-css": "1.0.16",
     "tailwindcss": "3.0.23",
-    "zod": "3.13.4",
-    "prisma": "3.11.1",
+    "zod": "3.13.4"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -52,7 +52,7 @@
     "prettier-plugin-prisma": "3.10.0",
     "pretty-quick": "3.1.3",
     "preview-email": "3.0.5",
-    "typescript": "~4.5",
+    "typescript": "~4.5"
   },
   "private": true
 }
